--- a/hw-03/HW-03_GitML-STUDENT.ipynb
+++ b/hw-03/HW-03_GitML-STUDENT.ipynb
@@ -92,12 +92,383 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sequence name</th>\n",
+       "      <th>mcg</th>\n",
+       "      <th>gvh</th>\n",
+       "      <th>alm</th>\n",
+       "      <th>mit</th>\n",
+       "      <th>erl</th>\n",
+       "      <th>pox</th>\n",
+       "      <th>vac</th>\n",
+       "      <th>nuc</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ADT2_YEAST</td>\n",
+       "      <td>0.43</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>0.48</td>\n",
+       "      <td>0.27</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.53</td>\n",
+       "      <td>0.22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ADT3_YEAST</td>\n",
+       "      <td>0.64</td>\n",
+       "      <td>0.62</td>\n",
+       "      <td>0.49</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.53</td>\n",
+       "      <td>0.22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AAR2_YEAST</td>\n",
+       "      <td>0.58</td>\n",
+       "      <td>0.44</td>\n",
+       "      <td>0.57</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.54</td>\n",
+       "      <td>0.22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AATM_YEAST</td>\n",
+       "      <td>0.42</td>\n",
+       "      <td>0.44</td>\n",
+       "      <td>0.48</td>\n",
+       "      <td>0.54</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.48</td>\n",
+       "      <td>0.22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>AATC_YEAST</td>\n",
+       "      <td>0.51</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>0.56</td>\n",
+       "      <td>0.17</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.49</td>\n",
+       "      <td>0.22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1478</th>\n",
+       "      <td>YUR1_YEAST</td>\n",
+       "      <td>0.81</td>\n",
+       "      <td>0.62</td>\n",
+       "      <td>0.43</td>\n",
+       "      <td>0.17</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.53</td>\n",
+       "      <td>0.22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1479</th>\n",
+       "      <td>ZIP1_YEAST</td>\n",
+       "      <td>0.47</td>\n",
+       "      <td>0.43</td>\n",
+       "      <td>0.61</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.48</td>\n",
+       "      <td>0.47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1480</th>\n",
+       "      <td>ZNRP_YEAST</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>0.57</td>\n",
+       "      <td>0.36</td>\n",
+       "      <td>0.19</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.56</td>\n",
+       "      <td>0.22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1481</th>\n",
+       "      <td>ZUO1_YEAST</td>\n",
+       "      <td>0.43</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>0.60</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.53</td>\n",
+       "      <td>0.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1482</th>\n",
+       "      <td>G6PD_YEAST</td>\n",
+       "      <td>0.65</td>\n",
+       "      <td>0.54</td>\n",
+       "      <td>0.54</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.53</td>\n",
+       "      <td>0.22</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1483 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Sequence name   mcg   gvh   alm   mit  erl  pox   vac   nuc\n",
+       "0       ADT2_YEAST  0.43  0.67  0.48  0.27  0.5  0.0  0.53  0.22\n",
+       "1       ADT3_YEAST  0.64  0.62  0.49  0.15  0.5  0.0  0.53  0.22\n",
+       "2       AAR2_YEAST  0.58  0.44  0.57  0.13  0.5  0.0  0.54  0.22\n",
+       "3       AATM_YEAST  0.42  0.44  0.48  0.54  0.5  0.0  0.48  0.22\n",
+       "4       AATC_YEAST  0.51  0.40  0.56  0.17  0.5  0.5  0.49  0.22\n",
+       "...            ...   ...   ...   ...   ...  ...  ...   ...   ...\n",
+       "1478    YUR1_YEAST  0.81  0.62  0.43  0.17  0.5  0.0  0.53  0.22\n",
+       "1479    ZIP1_YEAST  0.47  0.43  0.61  0.40  0.5  0.0  0.48  0.47\n",
+       "1480    ZNRP_YEAST  0.67  0.57  0.36  0.19  0.5  0.0  0.56  0.22\n",
+       "1481    ZUO1_YEAST  0.43  0.40  0.60  0.16  0.5  0.0  0.53  0.39\n",
+       "1482    G6PD_YEAST  0.65  0.54  0.54  0.13  0.5  0.0  0.53  0.22\n",
+       "\n",
+       "[1483 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "names = ['Sequence name', 'mcg', 'gvh', 'alm', 'mit', 'erl', \n",
+    "        'pox', 'vac', 'nuc']\n",
+    "file = pd.read_fwf('yeast.data', sep=' ')\n",
+    "\n",
+    "data = file.iloc[:,0:9]\n",
+    "labels = file.iloc[:,9]\n",
+    "data.columns= names\n",
+    "data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mcg</th>\n",
+       "      <th>gvh</th>\n",
+       "      <th>alm</th>\n",
+       "      <th>mit</th>\n",
+       "      <th>erl</th>\n",
+       "      <th>nuc</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>ADT1_YEAST</th>\n",
+       "      <td>0.61</td>\n",
+       "      <td>0.47</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>MIT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ADT2_YEAST</th>\n",
+       "      <td>0.67</td>\n",
+       "      <td>0.48</td>\n",
+       "      <td>0.27</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>MIT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ADT3_YEAST</th>\n",
+       "      <td>0.62</td>\n",
+       "      <td>0.49</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>MIT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AAR2_YEAST</th>\n",
+       "      <td>0.44</td>\n",
+       "      <td>0.57</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NUC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AATM_YEAST</th>\n",
+       "      <td>0.44</td>\n",
+       "      <td>0.48</td>\n",
+       "      <td>0.54</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>MIT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>YUR1_YEAST</th>\n",
+       "      <td>0.62</td>\n",
+       "      <td>0.43</td>\n",
+       "      <td>0.17</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>ME2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ZIP1_YEAST</th>\n",
+       "      <td>0.43</td>\n",
+       "      <td>0.61</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NUC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ZNRP_YEAST</th>\n",
+       "      <td>0.57</td>\n",
+       "      <td>0.36</td>\n",
+       "      <td>0.19</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>ME2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ZUO1_YEAST</th>\n",
+       "      <td>0.40</td>\n",
+       "      <td>0.60</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NUC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>G6PD_YEAST</th>\n",
+       "      <td>0.54</td>\n",
+       "      <td>0.54</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>CYT</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1484 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             mcg   gvh   alm  mit  erl  nuc\n",
+       "ADT1_YEAST  0.61  0.47  0.13  0.5  0.0  MIT\n",
+       "ADT2_YEAST  0.67  0.48  0.27  0.5  0.0  MIT\n",
+       "ADT3_YEAST  0.62  0.49  0.15  0.5  0.0  MIT\n",
+       "AAR2_YEAST  0.44  0.57  0.13  0.5  0.0  NUC\n",
+       "AATM_YEAST  0.44  0.48  0.54  0.5  0.0  MIT\n",
+       "...          ...   ...   ...  ...  ...  ...\n",
+       "YUR1_YEAST  0.62  0.43  0.17  0.5  0.0  ME2\n",
+       "ZIP1_YEAST  0.43  0.61  0.40  0.5  0.0  NUC\n",
+       "ZNRP_YEAST  0.57  0.36  0.19  0.5  0.0  ME2\n",
+       "ZUO1_YEAST  0.40  0.60  0.16  0.5  0.0  NUC\n",
+       "G6PD_YEAST  0.54  0.54  0.13  0.5  0.0  CYT\n",
+       "\n",
+       "[1484 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_fwf('yeast.data', sep=' ', names=names).drop(['Sequence name', 'pox', 'vac'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "### Put your code here ###\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
